compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_do_not_suggest_modules_from_another_package_with_internal_record_constructor.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n// Internal record constructor from another modules in another package should\n// not be suggested.\n\nimport module\npub fn main() {\n    MyRecord(1, 2)\n}"
---
----- SOURCE CODE
-- module.gleam

@internal
pub type MyType {
    MyRecord(x: Int, y: Int)
}

-- main.gleam

// Internal record constructor from another modules in another package should
// not be suggested.

import module
pub fn main() {
    MyRecord(1, 2)
}

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:7:5
  │
7 │     MyRecord(1, 2)
  │     ^^^^^^^^

The custom type variant constructor `MyRecord` is not in scope here.
