compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_do_not_suggest_modules_with_private_type.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n// Private type from another module should not be suggested.\n\nimport module\npub fn main() {\n    One\n}"
---
----- SOURCE CODE
-- module.gleam

type OneOrTwo {
    One
    Two
}

-- main.gleam

// Private type from another module should not be suggested.

import module
pub fn main() {
    One
}

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:6:5
  │
6 │     One
  │     ^^^

The custom type variant constructor `One` is not in scope here.
