compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_do_not_suggest_modules_with_public_function_with_incorrect_arity_1.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n// For functions, we only check the arity and not the type of arguments or the\n// return value.\n// Function with incorrect arity from another module should not be suggested.\n\nimport module\npub fn main() {\n    add(1, 1)\n}"
---
----- SOURCE CODE
-- module.gleam

pub fn add(x: Int) {
    x + 1
}

-- main.gleam

// For functions, we only check the arity and not the type of arguments or the
// return value.
// Function with incorrect arity from another module should not be suggested.

import module
pub fn main() {
    add(1, 1)
}

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:8:5
  │
8 │     add(1, 1)
  │     ^^^

The name `add` is not in scope here.
